--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -6,11 +6,9 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: flex-end;
-	position: relative;
 	bottom: 0;
 	right: 0;
 	padding-right: 24px;
-
 	p,
 	a {
 		font-weight: 900;
