--- a/src/components/WidgetHolder/widgetHolder.module.scss
+++ b/src/components/WidgetHolder/widgetHolder.module.scss
@@ -4,6 +4,7 @@
 .widgetHolderWrapper {
 	padding: 8px 40px;
 	height: 100%;
+	flex: 1;
 	overflow: auto;
 	.widgetHolder {
 		display: flex;
